--- a/CountDominance.bib
+++ b/CountDominance.bib
@@ -71,3 +71,25 @@
 	note = {ISBN 0-387-95457-0},
 	url = {https://www.stats.ox.ac.uk/pub/MASS4/},
 }
+
+@article{luchman2021determining,
+	title={Determining relative importance in Stata using dominance analysis: domin and domme},
+	author={Luchman, Joseph N},
+	journal={The Stata Journal},
+	volume={21},
+	number={2},
+	pages={510--538},
+	year={2021},
+	publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
+
+@article{tonidandel2011relative,
+	title={Relative importance analysis: A useful supplement to regression analysis},
+	author={Tonidandel, Scott and LeBreton, James M},
+	journal={Journal of Business and Psychology},
+	volume={26},
+	number={1},
+	pages={1--9},
+	year={2011},
+	publisher={Springer}
+}
